// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly default prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": undefined,
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        placeholderTextColor="#5D5D5D"
        secureTextEntry={false}
        style={
          Object {
            "color": "#231F20",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with default & margingTop prop 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#D7D7D7",
          "borderRadius": 2,
          "flexDirection": "row",
          "marginBottom": 7.857142857142857,
          "marginLeft": 7.857142857142857,
          "marginRight": 7.857142857142857,
          "marginTop": 15.714285714285714,
          "width": undefined,
        }
      }
    >
      <TextInput
        editable={false}
        placeholder="placeholder"
        placeholderTextColor="#5D5D5D"
        style={
          Object {
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with default & margingTop prop 2`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": "#A81E23",
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 15.714285714285714,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#5D5D5D"
        secureTextEntry={false}
        style={
          Object {
            "color": "#231F20",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Mulish-Regular",
            "fontSize": 17.2,
            "fontWeight": "normal",
          },
          Object {
            "color": "#A81E23",
          },
          Object {
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Error text
    </Text>
  </View>
</View>
`;

exports[`renders correctly with isPassword & secureTextEntry prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": undefined,
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#5D5D5D"
        secureTextEntry={false}
        style={
          Object {
            "color": "#231F20",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 6.142857142857142,
            "paddingRight": 18.428571428571427,
          }
        }
      >
        <SvgMock
          height={20}
          name="showpassword"
          onPress={[Function]}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with mask & value  prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": undefined,
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "color": "#231F20",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;

exports[`renders correctly with mask & value & errorText  prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": "#A81E23",
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "color": "#231F20",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Mulish-Regular",
            "fontSize": 17.2,
            "fontWeight": "normal",
          },
          Object {
            "color": "#A81E23",
          },
          Object {
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Error Text
    </Text>
  </View>
</View>
`;

exports[`renders correctly with rightIcon & iconHeight & iconWidth & borderColor & keyboardType prop 1`] = `
<View>
  <View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 2,
            "borderWidth": 1,
            "flexDirection": "row",
          },
          false,
          Object {
            "borderColor": "#007BC1",
          },
          Object {
            "marginBottom": 7.857142857142857,
            "marginLeft": 7.857142857142857,
            "marginRight": 7.857142857142857,
            "marginTop": 7.857142857142857,
            "width": undefined,
          },
        ]
      }
    >
      <TextInput
        keyboardType="name-phone-pad"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        placeholderTextColor="#5D5D5D"
        secureTextEntry={false}
        style={
          Object {
            "color": "#231F20",
            "flex": 1,
            "height": 58.971428571428575,
            "paddingLeft": 18.428571428571427,
            "textAlign": "left",
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 6.142857142857142,
            "paddingRight": 18.428571428571427,
          }
        }
      >
        <SvgMock
          height={55}
          name="gifticon"
          width={55}
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 7.857142857142857,
        "marginRight": 7.857142857142857,
      }
    }
  />
</View>
`;
